--- a/templates/signup.html
+++ b/templates/signup.html
@@ -15,7 +15,7 @@
 
 	<div class="login_container">
 		<h2>Sign Up</h2>
-		<form action="" method="POST">
+		<form action="/signup" method="POST">
 			<label for="username">Username</label>
 			<input type="text" id="username" name="username" required>
 
@@ -26,6 +26,9 @@
 		</form>
 
 		<p>Already have an account? <a href="/login">Log in</a></p>
+		{% if error != None %}
+		<p>{{ error }}</p>
+		{% endif %}
 	</div>
 
 	<script>
