--- a/static/css/style.css
+++ b/static/css/style.css
@@ -82,6 +82,11 @@ body {
   margin-bottom: 10px;
 }
 
+.post_author {
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+
 .post_description {
   font-size: 18px;
   margin-bottom: 10px;
