--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,6 +21,7 @@ body {
   padding: 1rem;
   position: relative;
 }
+
 .navbar_title {
     color: #fff;
 }
@@ -157,4 +158,56 @@ body {
   top: 50%; 
   transform: translateY(-50%);
   margin-left: 150px;
+}
+
+/* For webkit-based browsers */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #858585;
+  border-radius: 10px;
+}
+
+/* For Firefox */
+scrollbar {
+  width: 10px;
+}
+
+scrollbar-track {
+  background-color: #F5F5F5;
+}
+
+scrollbar-thumb {
+  background-color: #858585;
+  border-radius: 10px;
+}
+
+.discord-button {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background-color: #7289da;
+  padding: 10px;
+  border-radius: 10px 10px 10px 10px;
+  z-index: 999;
+  margin: 30px;
+  transition: transform 0.5s;
+  transform: scale(1);
+  cursor: pointer;
+}
+
+.discord-button a {
+  color: #fff;
+  text-decoration: none;
+}
+
+
+.discord-button:hover {
+  transform: scale(1.2);
 }
