Finalizes xJmd's and my own changes for adding comments

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,12 +47,13 @@
           <p class="post_description">{{ post['description'] }}</p>
           <p class="post_timestamp">{{ post['timestamp'] }}</p>
           <button class="share_button" data-id="{{ post['id'] }}">Share</button>
+          <a href="feed/share/{{ post['id'] }}"><button class="comment_button">View Comments</button></a>
           {% if post['author'] == "Anonymous" %}
             <h1 class="post_author anonymous_false">Posted by {{post['author'] }}</h1>
           {% else %}
             <h1 class="post_author anonymous_false">Posted by {{post['author'] }}</h1>
           {% endif %}
-          <a href="feed/share/{{ post['id'] }}">View comments</a>
+          
         </div>
         {% endfor %}
     </div>
@@ -66,7 +67,7 @@
         shareButtons.forEach(button => {
             button.addEventListener('click', () => {
                 const id = button.getAttribute('data-id');
-                const baseUrl = "https://mindstream.pythonanywhere.com"
+                const baseUrl = "localhost:5000"
                 const shareUrl = baseUrl + `/feed/share/${id}`;
                 navigator.clipboard.writeText(shareUrl)
                     .then(() => alert('Share link copied to clipboard!'))
