--- a/static/css/style.css
+++ b/static/css/style.css
@@ -108,6 +108,20 @@ body {
   transform: scale(1.1)
 }
 
+.comment_button{
+  font-size: 14px;
+  color: gray;
+  cursor: pointer;
+  padding: 3px;
+  margin-top: 20px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.comment_button:hover{
+  transform: scale(1.1)
+}
+
+
 .post_author{
   font-size: medium;
   margin-top: 10px;
