Bug fixes and profiles
-Fingers crossed, fixed the comment bug. A problem of pointers.
-Fixed post delete bug
-Fixed some style sheet loading bugs
-Improved some of the front-end organization

--- a/templates/404.html
+++ b/templates/404.html
@@ -9,7 +9,7 @@
 
 	<title>Mindstream - 404</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,700" rel="stylesheet">
-	<link type="text/css" rel="stylesheet" href="static/css/404.css"/>
+	<link type="text/css" rel="stylesheet" href="/static/css/404.css"/>
 
 
 
