--- a/templates/base.html
+++ b/templates/base.html
@@ -8,12 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
     <title>Mindstream</title>
 </head>
 <body>
     <nav class="navbar">
-        <h1 class="navbar_title">Mindstream</h1>
+        <h1 class="navbar_title" onclick="gohome()" style="cursor:pointer;">Mindstream</h1>
         {% if user == None %}
             <div class="btn-container">
                 <a href="/login" class="user-btn"><button><h1>Login</h1></button></a>
@@ -30,58 +30,24 @@
                 {% endif %}
             </div>
             <div class="user-show">
-                <a>Logged in as {{ user['name'] }}!</a>
+                <a href="/profile">Logged in as {{ user['name'] }}!</a>
             </div>
 
         {% endif %}
-        <form action="/feed" method="POST" class="post_form">
-            <input type="text" name="title" placeholder="Title" required>
-            <textarea name="description" placeholder="What's on your mind?" required></textarea>
-            <button type="submit">Post</button>
-        </form>
-    </nav>
-    <div class="posts_container">
-        {% for post in posts %}
-            <div class="post">
-                <h2 class="post_title">{{ post['title'] }}</h2>
-                <p class="post_description">{{ post['description'] }}</p>
-                <p class="post_timestamp">{{ post['timestamp'] }}</p>
+        {% block nav %}{% endblock %}
+        </nav>
 
-                <button class="share_button" data-id="{{ post['id'] }}">Share</button>
-                <a href="feed/share/{{ post['id'] }}"><button class="comment_button">View Comments ({{ post['comment-count'] }})</button></a>
-                <!-- <a href="feed/share/{{ post['id'] }}" class="button">View Comments ({{ post['comment-count'] }})</a> -->
+    {% block body %}
 
-                {% if user != None and user['permission-level'] > 0 %}
-                    <a class="button" href="admin/post/{{ post['id'] }}/remove">Delete</a>
-                {% endif %}
+    {% endblock %}
 
-                {% if post['author'] == "Anonymous" %}
-                    <h1 class="post_author anonymous_false">Posted by {{post['author'] }}</h1>
-                {% else %}
-                    <h1 class="post_author anonymous_false">Posted by {{post['author'] }}</h1>
-                {% endif %}
-            
-            </div>
-        {% endfor %}
-    </div>
     <div class="discord-button">
         <a href="https://discord.gg/X6QePymCQn">Join our Discord!</a>
     </div>
-
-
     <script>
-        const shareButtons = document.querySelectorAll('.share_button');
-        shareButtons.forEach(button => {
-            button.addEventListener('click', () => {
-                const id = button.getAttribute('data-id');
-                const baseUrl = "localhost:5000"
-                const shareUrl = baseUrl + `/feed/share/${id}`;
-                navigator.clipboard.writeText(shareUrl)
-                    .then(() => alert('Share link copied to clipboard!'))
-                    .catch(() => alert('Error copying share link to clipboard.'));
-            });
-        });
-
-    </script>
+        function gohome(){
+          window.location.href = "/feed"
+        }
+      </script>
 </body>
 </html>
