--- a/templates/shared.html
+++ b/templates/shared.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,8 +16,9 @@
             padding: 0;
             box-sizing: border-box;
         }
+
         textarea {
-          resize: vertical;
+            resize: vertical;
         }
 
 
@@ -78,178 +80,186 @@
         }
 
         .post {
-          color: black;
-          background-color: white;
-          padding: 20px;
-          margin-top: 10px;
-          margin-bottom: 20px;
-          box-shadow: 0 0 7px rgb(255, 255, 255);
-          transition: box-shadow 0.2s ease-in-out;
-          cursor: pointer;
+            color: black;
+            background-color: white;
+            padding: 20px;
+            margin-top: 10px;
+            margin-bottom: 20px;
+            box-shadow: 0 0 7px rgb(255, 255, 255);
+            transition: box-shadow 0.2s ease-in-out;
+            cursor: pointer;
 
         }
 
         .post:hover {
-          box-shadow: 0 0 15px rgb(173, 171, 171);
+            box-shadow: 0 0 15px rgb(173, 171, 171);
         }
 
         .post_title {
-          font-size: 24px;
-          margin-bottom: 10px;
+            font-size: 24px;
+            margin-bottom: 10px;
         }
 
         .post_description {
-          font-size: 18px;
-          margin-bottom: 10px;
+            font-size: 18px;
+            margin-bottom: 10px;
         }
 
         .post_timestamp {
-          font-size: 14px;
-          color: gray;
+            font-size: 14px;
+            color: gray;
         }
 
         .btn-container {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          margin-top: 100px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 100px;
         }
 
         #home-btn {
-          font-size: 30px;
-          background-color: #f2f2f2;
-          color: #777;
-          cursor: pointer;
-          border-radius: 5px;
-          border: none;
-          padding: 15px;
-          transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
-          box-shadow: 2px 2px 2px #ddd;
-          position: relative;
-          overflow: hidden;
-          margin-bottom: 100px;
+            font-size: 30px;
+            background-color: #f2f2f2;
+            color: #777;
+            cursor: pointer;
+            border-radius: 5px;
+            border: none;
+            padding: 15px;
+            transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
+            box-shadow: 2px 2px 2px #ddd;
+            position: relative;
+            overflow: hidden;
+            margin-bottom: 100px;
         }
 
         #home-btn:hover {
-          transform: scale(1.1);
-          background-color: #ddd;
+            transform: scale(1.1);
+            background-color: #ddd;
         }
 
-        
 
 
-        .post_author{
-          font-size: medium;
-          margin-top: 10px;
+
+        .post_author {
+            font-size: medium;
+            margin-top: 10px;
         }
-        
-        .anonymous_true{
-          color: rgb(226, 113, 113);
+
+        .anonymous_true {
+            color: rgb(226, 113, 113);
         }
-        
-        .anonymous_false{
-          color: #000000;
+
+        .anonymous_false {
+            color: #000000;
         }
 
         .comment {
-          color: black;
-          background-color: rgb(214, 214, 214);
-          padding: 15px;
-          margin-top: 10px;
-          margin-bottom: 20px;
-          
-          
-          
+            color: black;
+            background-color: rgb(214, 214, 214);
+            padding: 15px;
+            margin-top: 10px;
+            margin-bottom: 20px;
+
+
+
 
         }
 
 
         .comment_title {
-          font-size: 24px;
-          margin-bottom: 10px;
+            font-size: 24px;
+            margin-bottom: 10px;
         }
 
         .comment_description {
-          font-size: 18px;
-          margin-bottom: 10px;
+            font-size: 18px;
+            margin-bottom: 10px;
         }
 
         .comment_timestamp {
-          font-size: 14px;
-          color: rgb(0, 0, 0);
+            font-size: 14px;
+            color: rgb(0, 0, 0);
         }
 
-        .comment_author{
-          font-size: medium;
-          margin-top: 10px;
+        .comment_author {
+            font-size: medium;
+            margin-top: 10px;
         }
+
         form {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
+
         .t_area {
-          width: 100%;
-          padding: 10px;
-          margin: 10px 0;
-          border: 1px solid #ccc;
-          border-radius: 5px;
-          resize: vertical;
-          font-size: 16px;
-          line-height: 1.5;
-          
+            width: 100%;
+            padding: 10px;
+            margin: 10px 0;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            resize: vertical;
+            font-size: 16px;
+            line-height: 1.5;
+
         }
+
         .but-send {
-          background-color: #4CAF50;
-          color: white;
-          border: none;
-          border-radius: 5px;
-          padding: 20px;
-          cursor: pointer;
-          font-size: 16px;
-          transition: background-color 0.5s ease;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 20px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.5s ease;
         }
+
         .but-send:hover {
-          background-color: #49664a;
+            background-color: #49664a;
         }
     </style>
 </head>
+
 <body>
     <nav class="navbar">
         <h1 class="navbar_title" onclick="gohome()">Mindstream</h1>
     </nav>
     <div class="posts_container">
         <div class="post">
-          <h2 class="post_title">{{ post['title'] }}</h2>
-          <p class="post_description">{{ post['description'] }}</p>
-          <p class="post_timestamp">{{ post['timestamp'] }}</p>
-          {% if post['author'] == "Anonymous" %}
+            <h2 class="post_title">{{ post['title'] }}</h2>
+            <p class="post_description">{{ post['description'] }}</p>
+            <p class="post_timestamp">{{ post['timestamp'] }}</p>
+            {% if post['author'] == "Anonymous" %}
             <h1 class="post_author anonymous_false">Posted by {{post['author'] }}</h1>
-          {% else %}
-            <h1 class="post_author anonymous_false">Posted by {{post['author'] }}</h1> 
-          {% endif %} 
+            {% else %}
+            <h1 class="post_author anonymous_false">Posted by {{post['author'] }}</h1>
+            {% endif %}
         </div>
-        <div style="display: block; margin: 0 auto; margin-top: 20px; margin-bottom: 20px; width: 0; height: 0; border-left: 15px solid transparent; border-right: 15px solid transparent; border-top: 15px solid rgb(223, 223, 223);"></div>
+        <div
+            style="display: block; margin: 0 auto; margin-top: 20px; margin-bottom: 20px; width: 0; height: 0; border-left: 15px solid transparent; border-right: 15px solid transparent; border-top: 15px solid rgb(223, 223, 223);">
+        </div>
 
         {% for comment in post['comments'] %}
         <div class="comment">
-          <b class="comment_author anonymous_false">{{comment['author'] }}</b>
-          <p class="comment_description">{{ comment['text'] }}</p>
-          <p class="comment_timestamp">{{ comment['timestamp'] }}</p>
+            <b class="comment_author anonymous_false">{{comment['author'] }}</b>
+            <p class="comment_description">{{ comment['text'] }}</p>
+            <p class="comment_timestamp">{{ comment['timestamp'] }}</p>
         </div>
         {% endfor %}
         <form action="" method="POST">
-          <textarea name="comment" placeholder="Type your comment here..." class="t_area" required></textarea>
-          <button type="submit" class="but-send">Send</button>
+            <textarea name="comment" placeholder="Type your comment here..." class="t_area" required></textarea>
+            <button type="submit" class="but-send">Send</button>
         </form>
     </div>
     <div class="btn-container">
-      <a href="/feed"><button id="home-btn">Go back to home</button></a>
+        <a href="/feed"><button id="home-btn">Go back to home</button></a>
     </div>
     <script>
-      function gohome(){
-        window.location.href = "/feed"
-      }
+        function gohome() {
+            window.location.href = "/feed"
+        }
     </script>
 </body>
+
 </html>
