--- a/static/css/style.css
+++ b/static/css/style.css
@@ -298,10 +298,19 @@ scrollbar-thumb {
   margin-bottom: 20px;
 }
 
+.name-container {
+  display: flex;
+
+}
+
+
+
+
 .profile-username {
   font-size: 24px;
   font-weight: bold;
   color: #333;
+  margin-right: 7px;
 }
 
 .profile-handle {
@@ -332,4 +341,68 @@ scrollbar-thumb {
 }
 .mention:hover {
   background: #dfeeff;
+}
+
+
+
+
+
+
+@media only screen and (max-width: 1200px) {
+
+  .body{
+    overflow-x: hidden;
+    flex-direction: column;
+  }
+
+
+  .discord-button{
+    display: none;
+  }
+
+  .user-show{
+    display: none;
+  }
+  .navbar_title {
+    display: none;
+  }
+
+  .user-btn{
+    display: none;
+  }
+
+  .post_form{
+    margin: 0;
+  }
+  .posts_container{
+    margin: 20px;
+  }
+
+  #sub-but{
+    width: 15%;
+  }
+
+  #title-in{
+    width: 25%;
+    margin-left: 20px;
+  }
+  
+  .menu-icon {
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    margin: 10px;
+  }
+  
+  .menu-line {
+    width: 100%;
+    height: 4px;
+    background-color: #ffffff;
+    margin-bottom: 5px;
+    transition: all 0.3s ease-in-out;
+   
+  }
+  
+  
+
 }
