--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -2,10 +2,15 @@
 
 {% block body %}
     <div class="profile-container">
+        
         <div class="profile-header">
             <div class="name-container">
-                <h1 class="profile-username">{{ info['name'] }}</h1>
-                <i class="fas fa-check-circle text-blue fa-2x"></i>
+                 <h1 class="profile-username">{{ info['name'] }}</h1>
+                {% if info['verified'] == 'true' %}
+                   <i class="fas fa-check-circle text-blue fa-2x"></i>
+                {% else %}
+                    <a style="display: none;"></a>
+                {% endif %}
             </div>
             <a href="" class="profile-handle mention">@{{ info['name'] }}</a>
         </div>
