Made checkmarks green
Also fixed some of the followers stuff. We still need to add a follow button, but it's a start.

--- a/templates/feed.html
+++ b/templates/feed.html
@@ -31,7 +31,7 @@
                     <h1 class="post_author anonymous_false">Posted by
                         <a href="/profile/{{post['author'] }}" class="mention">@{{post['author'] }}</a>
                         {% if post['verified'] %}
-                            <i class="fas fa-check-circle text-blue fa-1x"></i>
+                            <i class="fas fa-check-circle text-blue fa-1x" style="color: #56c74f"></i>
                         {% else %}
                             <a style="display: none;"></a>
                         {% endif %}
