--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -7,7 +7,7 @@
             <div class="name-container">
                  <h1 class="profile-username">{{ info['name'] }}</h1>
                 {% if info['verified'] %}
-                   <i class="fas fa-check-circle text-blue fa-2x"></i>
+                   <i class="fas fa-check-circle text-blue fa-2x" style="color: #56c74f"></i>
                 {% else %}
                     <a style="display: none;"></a>
                 {% endif %}
