--- a/templates/shared.html
+++ b/templates/shared.html
@@ -156,13 +156,10 @@
 
         .comment {
             color: black;
-            background-color: rgb(214, 214, 214);
+            background-color: rgb(228, 228, 228);
             padding: 15px;
             margin-top: 10px;
             margin-bottom: 20px;
-
-
-
 
         }
 
@@ -250,7 +247,7 @@
             <h1 class="post_author anonymous_false">Posted by
                 <a href="/profile/{{post['author'] }}" class="mention">@{{post['author'] }}</a>
                 {% if post['verified'] %}
-                   <i class="fas fa-check-circle text-blue fa-1x"></i>
+                   <i class="fas fa-check-circle text-blue fa-1x" style="color: #56c74f"></i>
                 {% else %}
                     <a style="display: none;"></a>
                 {% endif %}
@@ -266,7 +263,7 @@
 
             <a href="/profile/{{comment['author'] }}" class="mention post_author anonymous_false">@{{comment['author'] }}</a>
             {% if comment['verified'] %}
-                   <i class="fas fa-check-circle text-blue fa-1x"></i>
+                   <i class="fas fa-check-circle text-blue fa-1x" style="color: #56c74f"></i>
                 {% else %}
                     <a style="display: none;"></a>
                 {% endif %}
